<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="boxOne">Box One</string>
    <string name="boxTwo">Box Two</string>
    <string name="boxThree">Box Three</string>
    <string name="boxFour">Box Four</string>
    <string name="boxFive">Box Five</string>
    <string name="buttonRed">RED</string>
    <string name="buttonYellow">YELLOW</string>
    <string name="buttonGreen">GREEN</string>
    <string name="text1">This is a game:</string>
    <string name="text2">Tap the screen and buttons</string>
</resources>