<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral99"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="@dimen/altoBloques"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral20"
        android:fontFamily="@font/roboto"
        android:text="@string/boxOne"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="186dp"
        android:layout_height="136dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/material_dynamic_neutral50"
        android:fontFamily="@font/roboto"
        android:text="@string/boxTwo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/boxThree"
        android:layout_width="0dp"
        android:layout_height="@dimen/altoBloques"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral50"
        android:fontFamily="@font/roboto"
        android:text="@string/boxThree"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/boxFour"
        android:layout_width="0dp"
        android:layout_height="@dimen/altoBloques"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral50"
        android:fontFamily="@font/roboto"
        android:text="@string/boxFour"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/boxThree"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/boxFive"
        android:layout_width="0dp"
        android:layout_height="@dimen/altoBloques"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral50"
        android:fontFamily="@font/roboto"
        android:text="@string/boxFive"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/boxFour"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="184dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/buttonRed"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/buttonGreen"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="184dp"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/buttonYellow"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:text="@string/text2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>